// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. no child elements 1`] = `""`;

exports[`2. a single child element 1`] = `
<style>
.S1 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}
</style>

<configweb__Base>
  <div
    className="jwBPcH S1"
  >
    <responsiveweb__SliceContainer>
      <div
        className="goDieb S1"
      >
        <responsiveweb__Base>
          <div
            className="ipwGMY S1"
          >
            <responsiveweb__ChildContainer>
              <div
                className="bwWtkp S1"
              >
                <div
                  className="S1"
                >
                  standard-1
                </div>
              </div>
            </responsiveweb__ChildContainer>
          </div>
        </responsiveweb__Base>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`3. two child elements 1`] = `
<style>
.S1 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}
</style>

<configweb__Base>
  <div
    className="blpnnB S1"
  >
    <responsiveweb__SliceContainer>
      <div
        className="goDieb S1"
      >
        <responsiveweb__Base>
          <div
            className="ipwGMY S1"
          >
            <responsiveweb__ChildContainer>
              <div
                className="bwWtkp S1"
              >
                <div
                  className="S1"
                >
                  standard-1
                </div>
              </div>
            </responsiveweb__ChildContainer>
            <responsiveweb>
              <div
                className="iiVeDy S1"
              />
            </responsiveweb>
            <responsiveweb__ChildContainer>
              <div
                className="bwWtkp S1"
              >
                <div
                  className="S1"
                >
                  standard-2
                </div>
              </div>
            </responsiveweb__ChildContainer>
          </div>
        </responsiveweb__Base>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`4. three child elements 1`] = `
<style>
.S1 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}
</style>

<configweb__Base>
  <div
    className="bCJkFj S1"
  >
    <responsiveweb__SliceContainer>
      <div
        className="goDieb S1"
      >
        <responsiveweb__Base>
          <div
            className="dOLCXz S1"
          >
            <responsiveweb__ChildContainer>
              <div
                className="bwWtkp S1"
              >
                <div
                  className="S1"
                >
                  standard-1
                </div>
              </div>
            </responsiveweb__ChildContainer>
            <responsiveweb>
              <div
                className="iiVeDy S1"
              />
            </responsiveweb>
            <responsiveweb__ChildContainer>
              <div
                className="bwWtkp S1"
              >
                <div
                  className="S1"
                >
                  standard-2
                </div>
              </div>
            </responsiveweb__ChildContainer>
            <responsiveweb>
              <div
                className="iiVeDy S1"
              />
            </responsiveweb>
            <responsiveweb__ChildContainer>
              <div
                className="bwWtkp S1"
              >
                <div
                  className="S1"
                >
                  standard-3
                </div>
              </div>
            </responsiveweb__ChildContainer>
          </div>
        </responsiveweb__Base>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;
